Fixed scrollbars

--- a/Frontend/frontend/app/globals.css
+++ b/Frontend/frontend/app/globals.css
@@ -27,6 +27,8 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI",  "Helvetica Neue", Arial, sans-serif;
+  height: 100%;
+  overflow: hidden;
 }
 
 /* Custom scrollbar */
